--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
 % created: 2013-05-26
 % last revision: 2017-03-30
 
-\documentclass[10pt,a4paper,sans]{moderncv}
+\documentclass[9pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
 \usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
@@ -26,82 +26,59 @@
 \familyname{Medeiros}
 
 % optional info
-\title{Curriculum Vitae}
+% \title{Curriculum Vitae}
 \mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
-\homepage{http://alemedeiros.xyz}
+\homepage{alemedeiros.xyz}
 \social[github]{alemedeiros}
 \social[linkedin]{alemedeiros}
-\photo[50pt][0.7pt]{alemedeiros}
+% \photo[50pt][0.7pt]{alemedeiros}
 % \quote{``I must think of something!'' - Alexandre Medeiros}
 
 \begin{document}
 \makecvtitle
-\section{Summary}{A versatile programmer with distinguished academic performance. Interested in several areas of Computer Science, ranging from Operating Systems and low level programming to high level and abstract concepts as Functional Programming and MapReduce programming model. I enjoy learning new skills and facing challenges, my main carreer goal is to never stop growing up professionally and technically.}
+\section{Summary}{My professional interests range from abstract and high level concepts as Functional Programming to Operating and Distributed Systems. Designing and implementing solutions focused on code quality and scalability is the main goal of my career.}
 
 \section{Education}
-\cventry{2011 --- 2016}{B.Sc. Computer Science}{University of Campinas}{Campinas, São Paulo, Brazil}{}{%
-  Graduated with honours (GPA 8.6/10)\newline
-	Pascal Award 2014 (Best academic performance of Computer Science students)
+\cventry{2011 --- 2016}{\href{http://www.ic.unicamp.br/}{University of Campinas}}{B.Sc. Computer Science}{Campinas}{}{%
+  Graduated with honors (GPA 8.6/10)\newline
+  \href{http://www.ic.unicamp.br/sobre/institucional/premios/listacompleta}{Pascal Award 2014} (Best academic performance of Computer Science students)
 }
-\cventry{September 2014 --- August 2015}{B.Sc. Computer Science}{Queen Mary University of London}{London, United Kingdom}{}{Associate Student (Funded by Brazilian Government Scholarship: Science without Borders)}
+\cventry{September 2014 --- August 2015}{\href{http://www.qmul.ac.uk/}{Queen Mary University of London}}{B.Sc. Computer Science}{London}{}{%
+  Associate Student (\href{http://www.cienciasemfronteiras.gov.br/}{Science without Borders})
+  }
 
 \section{Experience}
 
 \subsection{Professional}
 
-\cventry{September 2016 --- Present}{Software Engineer}{Nubank}{São Paulo, São Paulo, Brazil}{}{%
-  Back-end developtment in a microservices architecture.\newline
+\cventry{September 2016 --- Present}{\href{https://nubank.com.br}{Nubank}}{Backend Software Engineer }{2 years}{São Paulo}{%
+  Tech Lead role on Rewards squad since June 2018.\newline
+  Micro-services architecture\newline
+  \href{https://www.nubank.com.br/rewards}{Nubank Rewards} Program Launch and Maintenance.\newline
+  Rewards refactoring, improving performance and the user experience.\newline
+  Credit Card Bill PDF rendering refactor and optimization.\newline
   Main Language: Clojure
 }
 
-\cventry{December 2015 --- March 2016}{Software Engineering Intern}{Google}{Belo Horizonte, Minas Gerais, Brazil}{Health Search Exploration}{%
-  Data Analysis and new products explorations\newline
+\cventry{December 2015 --- March 2016}{\href{https://google.com}{Google}}{Software Engineering Intern}{3 months}{Belo Horizonte}{%
+  Health Search exploration project.\newline
 	Host: Bruno Gusmão\newline
   Main Language: C++
 }
 
 \subsection{Academic}
 
-\cventry{2013 --- 2014}{Power Estimations for Android based ARM Mobile Devices}{Undergraduate Research}{University of Campinas}{Campinas, São Paulo, Brazil}{%
-	Advisor: Prof.\ Edson Borin (IC-Unicamp)\newline
-	Co-Advisor: Prof.\ Sandro Rigo (IC-Unicamp)\newline
-	Funded by a Samsung Scholarship
+\cventry{2012 --- 2016}{\href{http://www.ic.unicamp.br/}{University of Campinas}}{Teaching Assistant}{6 terms}{Campinas}{%
+  Teaching assistant for Object Oriented Programming, Algorithm and Computer Programming, Basic Organization of Computers and Assembly Language, Data Structures
 }
-
-\cventry{2013}{SINAR: A low-cost image-based speed radar}{Intel Embedded Systems Competition 2013}{III Brazilian Symposium on Computing Systems Engineering}{Niterói, Rio de Janeiro, Brazil}{%
-  \nth{2} place project\newline
-	Group: Gabriel Krisman, Augusto Morgan e Alexandre Medeiros\newline
-	Supervisors: Prof.\ Siome Goldenstein e Prof.\ Edson Borin
-}
-
-\cventry{2012 --- 2016}{Teaching Assistant}{}{University of Campinas}{Campinas, São Paulo, Brazil}{%
-	\begin{itemize}
-		\item Object Oriented Programming --- \nth{1} semester of 2016
-		\item Algorithm and Computer Programming --- \nth{1} semester of 2014
-		\item Algorithm and Computer Programming --- \nth{2} semester of 2013
-		\item Basic Organization of Computers and Assembly Language --- \nth{1} semester of 2013
-		\item Data Structures --- \nth{2} semester of 2012
-		\item Data Structures --- \nth{1} semester of 2012
-	\end{itemize}
-}
-
-\subsection{Volunteer}
-
-\cventry{2011 --- 2014}{Administrative Officer}{CACo (Centro Acadêmico da Computação)}{University of Campinas}{Campinas, São Paulo, Brazil}{Unicamp Computing Students' Union}
-
-\cventry{2012 --- 2013}{Undergraduate Representative}{Institute of Computing}{University of Campinas}{Campinas, São Paulo, Brazil}{Undergraduate representative in the Undergraduate Affairs Commission of the Institute of Computing during the 2012--13 term}
-
-\cventry{2012, 2013}{Basic GNU/Linux Instructor for Freshmen}{GPSL (Grupo Pró Software Livre)}{University of Campinas}{Campinas, São Paulo, Brazil}{Basic GNU/Linux classes for Computing Students organized by the Pro-Free Software Group (GPSL)}
 
 \section{Technical Skills}
-\cvitem{Basic}{ARM Assembly, VHDL, Go, Lua, JavaScript}
-\cvitem{Intermediate}{Clojure, Haskell, GNU/Linux Operating Systems, Parallel Programming, Shell Script, git, \LaTeX{}, Java}
-\cvitem{Advanced}{C/C++, Python}
+\cvitem{Familiar}{C/C++, Python, Clojure, Haskell, Shell Script}
+\cvitem{Basic}{Go, Lua, JavaScript, Java}
 
 \section{Languages}
-\cvlanguage{Portuguese}{Fluent}{Native Language}
-\cvlanguage{English}{Fluent}{Overall of 8.0 on IELTS Academic test (2013)}
-\cvlanguage{French}{Basic}{}
+\cvlanguage{Portuguese}{Native Language}{}
+\cvlanguage{English}{Fluent}{}
 
 \end{document}
