--- a/cv.tex
+++ b/cv.tex
@@ -52,24 +52,26 @@
 
 \cventry{2011 --- 2016}{\href{https://ic.unicamp.br/}{University of Campinas}}{B.Sc. Computer Science}{Campinas}{}{%
   Graduated with honors. GPA 8.6 out of 10.\newline
-  \href{https://ic.unicamp.br/conheca-o-ic/premiacoes/premiados/}{Pascal Award 2014} (Best academic performance of Computer Science students).\newline
+  \href{https://ic.unicamp.br/conheca-o-ic/premiacoes/premiados/}{Pascal Award 2014} (Best academic performance of CS students).\newline
 }
 
 \cventry{September 2014 --- August 2015}{\href{http://www.qmul.ac.uk/}{Queen Mary University of London}}{B.Sc. Computer Science}{London}{}{%
-  Associate Student (Sponsored by \href{http://www.cienciasemfronteiras.gov.br/}{Science without Borders} Brazilian government program).\newline
+  Associate Student (Sponsored by \href{http://www.cienciasemfronteiras.gov.br/}{Science without Borders}).\newline
 }
 
 \section{Experience}
 
 \subsection{\href{https://nubank.com.br}{Nubank}}
 
-\cventry{March 2019 --- Present}{Software Engineer}{Security Engineering Squad}{Current Position}{São Paulo}{%
-  Reimplementation of microservices' loading of Certificate Revokation List, reaching great performance and cost improvements.\newline
+\cventry{March 2019 --- Present}{Software Engineer}{Security Engineering Squad}{Current}{São Paulo}{%
+  Reimplementation of microservices' loading of Certificate Revokation List.\newline
   Secrets Management System for creating and automatically rotating secrets.\newline
 }
 
 \cventry{June 2018 --- March 2019}{Software Engineer Tech Lead}{Rewards Squad}{9 months}{São Paulo}{%
-  Rewards big refactoring, improving performance and the user experience.\newline
+  Centralization of program configurations into a single service.\newline
+  Cached Backend For Frontend service.\newline
+  Communication with client using generic format.\newline
   Lead a team of 3 to 4 engineers.\newline
 }
 
@@ -85,7 +87,8 @@
 \subsection{Google}
 
 \cventry{December 2015 --- March 2016}{Software Engineering Intern}{Health Search}{3 months}{Belo Horizonte}{%
-  Exploration project. Host: Bruno Gusmão.\newline
+  Exploration project.\newline
+  Host: Bruno Gusmão.\newline
 }
 
 \subsection{Academic}
