--- a/cv.tex
+++ b/cv.tex
@@ -43,15 +43,15 @@
   with several computing areas, ranging from abstract and high level concepts
   such as Functional Programming, Cryptography, and Theory of Computation to
   more concrete and lower level topics like Distributed Systems, Cloud
-  Computing, and Information Security. With a great drive to excell and learn,
-  I always strive to create reliable and scalable systems through good practices
+  Computing, and Information Security. With a great drive to excel and learn, I
+  always strive to create reliable and scalable systems through good practices
   like extensive testing, code reviews, and incremental deliveries.
 }
 
 \section{Education}
 
 \cventry{2011 --- 2016}{\href{https://ic.unicamp.br/}{University of Campinas}}{B.Sc. Computer Science}{Campinas}{}{%
-  Graduated with honors. GPA 8.6 out of 10.\newline
+  Graduated with honors. GPA: 8.6 out of 10.\newline
   \href{https://ic.unicamp.br/conheca-o-ic/premiacoes/premiados/}{Pascal Award 2014} (Best academic performance of CS students).\newline
 }
 
@@ -64,7 +64,7 @@
 \subsection{\href{https://nubank.com.br}{Nubank}}
 
 \cventry{March 2019 --- Present}{Software Engineer}{Security Engineering Squad}{Current}{São Paulo}{%
-  Reimplementation of microservices' loading of Certificate Revokation List.\newline
+  Reimplementation of microservices' loading of Certificate Revocation List.\newline
   Secrets Management System for creating and automatically rotating secrets.\newline
 }
 
