--- a/cv.tex
+++ b/cv.tex
@@ -7,9 +7,9 @@
 % % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 % created: 2013-05-26
-% last revision: 2020-02-09
+% last revision: 2024-04-29
 
-\documentclass[9pt,a4paper,sans]{moderncv}
+\documentclass[11pt,a4paper,sans]{moderncv}
 \usepackage{fullpage}
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
@@ -29,82 +29,124 @@
 % \title{Curriculum Vitae}
 \mobile{+55~(11)~96624~2947}
 \email{alexandre.n.medeiros@gmail.com}
-\homepage{alemedeiros.dev}
+%\homepage{alemedeiros.dev}
 \social[github]{alemedeiros}
 \social[linkedin]{alemedeiros}
 % \photo[50pt][0.7pt]{alemedeiros}
 % \quote{``I must think of something!'' - Alexandre Medeiros}
 
+\renewcommand{\bfdefault}{m}
+\renewcommand{\seriesdefault}{l}
+
 \begin{document}
+
 \makecvtitle
-\section{Summary}{%
+
+\section{Summary}{
   Passionate about technology and computing from an early age, Computer Science
-  was always the obvious choice for me. During my studies I fell deep in love
-  with several computing areas, ranging from abstract and high level concepts
-  such as Functional Programming, Cryptography, and Theory of Computation to
-  more concrete and lower level topics like Distributed Systems, Cloud
-  Computing, and Information Security. With a great drive to excel and learn, I
-  always strive to create reliable and scalable systems through good practices
-  like extensive testing, code reviews, and incremental deliveries.
+  was always the obvious choice for me. During my studies I fell in love with
+  several computing areas, ranging from abstract and high level concepts such as
+  Functional Programming, Cryptography, and Theory of Computation to more
+  concrete and lower level topics like Distributed Systems, Cloud Computing, and
+  Information Security.
+
+  Ever since I started my career, I've developed a great drive to excel, learn,
+  and build reliable and scalable systems. Always valuing the importance of the
+  collaboration necessary to achieve such results. I'm always looking for
+  opportunities to learn and share knowledge with my peers.
 }
 
-\section{Education}
-
-\cventry{2011 --- 2016}{\href{https://ic.unicamp.br/}{University of Campinas}}{B.Sc. Computer Science}{Campinas}{}{%
-  Graduated with honors. GPA: 8.6 out of 10.\newline
-  \href{https://ic.unicamp.br/conheca-o-ic/premiacoes/premiados/}{Pascal Award 2014} (Best academic performance of CS students).\newline
-}
-
-\cventry{September 2014 --- August 2015}{\href{http://www.qmul.ac.uk/}{Queen Mary University of London}}{B.Sc. Computer Science}{London}{}{%
-  Associate Student (Sponsored by \href{http://www.cienciasemfronteiras.gov.br/}{Science without Borders}).\newline
-}
 
 \section{Experience}
 
+\subsection{\href{https://www.uber.com/}{Uber}}
+
+\cventry{June 2023 --- Present}{Senior Software Engineer}{Session Management Team | Customer Identity Platform}{10 months}{São Paulo (Hybrid)}{
+  Implementation for authenticated request metadata injection as a dependency
+  for a larger initiative related to PCI DSS compliance Project.\newline
+  Definition and implementation for Experiment to determine optimal session
+  inactivity TTL.\newline
+}
+
+\subsection{\href{https://aiven.io/}{Aiven}}
+
+\cventry{September 2022 --- January 2023}{Senior Software Engineer}{Security Engineering Team}{4 months}{Remote}{
+  Automation for integrating user creation and data synchronization for internal
+  IT systems as an onboarding project.\newline
+  Minor contributions to tasks related PCI DSS.\newline
+}
+
+\subsection{\href{https://kirasystems.com/}{Kira Systems} / \href{https://www.litera.com/}{Litera}}
+
+\cventry{January 2022 --- March 2022}{Senior AppSec Developer}{AppSec Team (Litera)}{3 months}{Remote}{
+  Gathered and documented the current state of security measures implemented by
+  each Litera product, such as SAST, SCA, Penetration Testing etc.\newline
+}
+
+\cventry{November 2020 --- January 2022}{Senior Security Developer}{Sectopod (Kira)}{15 months}{Remote}{%
+  IDP infrastructure and deployment scripts for multi-product single login.\newline
+  Automation of SAST check on build pipeline.\newline
+  Maintenance and Vulnerability fixes for the SAML integration.\newline
+}
+
 \subsection{\href{https://nubank.com.br}{Nubank}}
 
-\cventry{March 2019 --- Present}{Software Engineer}{Security Engineering Squad}{Current}{São Paulo}{%
+\cventry{March 2019 --- August 2020}{Software Engineer}{Security Engineering Squad}{17 months}{São Paulo}{%
   Reimplementation of microservices' loading of Certificate Revocation List.\newline
-  Secrets Management System for creating and automatically rotating secrets.\newline
+  Secrets Management System for creating and automatically rotating systems' secrets.\newline
 }
 
 \cventry{June 2018 --- March 2019}{Software Engineer Tech Lead}{Rewards Squad}{9 months}{São Paulo}{%
-  Centralization of program configurations into a single service.\newline
-  Cached Backend For Frontend service.\newline
-  Communication with client using generic format.\newline
-  Lead a team of 3 to 4 engineers.\newline
+  Led a team from 3 to 4 backend engineers.\newline
+  Centralization of custom rules per customer grouping into a single service to deal with desynchronization between multiple shards.\newline
+  Cache-powered Backend For Frontend service.\newline
+  Design and implementation of extensible and versatile server-client communication format to improve agility for improving on the UI.\newline
 }
 
 \cventry{January 2017 --- June 2018}{Software Engineer}{Rewards Squad}{18 months}{São Paulo}{%
-  \href{https://www.nubank.com.br/rewards}{Nubank Rewards} Program Launch Plan.\newline
-  Program feature testing and incremental improvements.\newline
+  \href{https://www.nubank.com.br/rewards}{Nubank Rewards} Program Launch Plan from Beta phase.\newline
+  Program features AB testing and incremental improvements.\newline
 }
 
 \cventry{September 2016 --- January 2017}{Software Engineer}{Bills Squad}{4 months}{São Paulo}{%
-  Credit Card Bill PDF rendering refactor and optimization.\newline
+  Credit Card Bill PDF rendering reimplementation for performance improvement and redesign.\newline
 }
+
 
 \subsection{Google}
 
 \cventry{December 2015 --- March 2016}{Software Engineering Intern}{Health Search}{3 months}{Belo Horizonte}{%
-  Exploration project.\newline
+  Exploration project using salient terms.\newline
   Host: Bruno Gusmão.\newline
 }
 
 \subsection{Academic}
 
 \cventry{2012 --- 2016}{Teaching Assistant}{\href{https://ic.unicamp.br/}{University of Campinas}}{6 terms}{Campinas}{%
-  Teaching assistant for Data Structures, Algorithm and Computer Programming, Basic Organization of Computers and Assembly Language, and Object Oriented Programming.\newline
+  Data Structures, Algorithm and Computer Programming, Basic Organization of Computers and Assembly Language, and Object Oriented Programming courses.\newline
+}
+
+\section{Education}
+
+\cventry{2011 --- 2016}{\href{https://ic.unicamp.br/}{University of Campinas}}{B.Sc. Computer Science}{Campinas}{}{%
+  Graduated with honors, as the second in my class. GPA: 8.6 out of 10.\newline
+  \href{https://ic.unicamp.br/conheca-o-ic/premiacoes/premiados/}{Pascal Award 2014} (Best academic performance of CS students).\newline
+}
+
+\cventry{September 2014 --- August 2015}{\href{https://www.qmul.ac.uk/}{Queen Mary University of London}}{B.Sc. Computer Science}{London}{}{%
+  Associate Student (Sponsored by \href{http://www.cienciasemfronteiras.gov.br/}{Science without Borders}).\newline
 }
 
 \section{Technical Skills}
 \cvitem{Comfortable}{Clojure, Python, Shell Script}
-\cvitem{Familiar}{C/C++, Haskell, Java}
-\cvitem{Basic}{Go, Lua, JavaScript}
+\cvitem{Familiar}{C/C++, Haskell, Go, Java}
+\cvitem{Basic}{Lua, JavaScript, Kubernetes}
 
 \section{Languages}
 \cvlanguage{Portuguese}{Native Language}{}
 \cvlanguage{English}{Fluent}{}
-\cvlanguage{French}{Beginner}{}
+% \cvlanguage{French}{Beginner}{}
 
 \end{document}
+
+% I previously worked at Nubank and actively participated in discussions regarding Clojure and I also took the initiative to teach clojure to several teammates as an onboarding buddy
